# yodoca

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  NOTICE  README.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.example.yaml  settings.yaml
core/: __init__.py  __main__.py  config_check.py  context.py  contract.py  loader.py  logging_config.py  manifest.py  openai_config.py  router.py  runner.py  secrets.py  settings.py  settings_models.py  terminal.py
core/agents/: __init__.py  builder.py  deferred_tool_resolver.py  delegation_tools.py  factory.py  lifecycle.py  orchestrator.py  registry.py  semantic_agent_selector.py
core/events/: __init__.py  bus.py  journal.py  models.py  topics.py
core/extensions/: __init__.py  agent_invoker.py  approval_coordinator.py  builtin_context.py  context.py  context_builder.py  contract.py  declarative_agent.py  event_wiring.py  health_check.py  instructions.py  loader.py  manifest.py  manifest_utils.py  project_context.py  project_repository.py  project_service.py  response_delivery_service.py  router.py  scheduler_manager.py  session_manager.py  session_repository.py  tool_resolver.py  update_fields.py
core/llm/: __init__.py  capabilities.py  catalog.py  protocol.py  router.py
core/tools/: __init__.py  channel.py  configure_extension.py  extensions_doctor.py  file_manager.py  provider.py  restart.py  sandbox.py  secure_input.py  shell_exec.py
core/utils/: __init__.py  formatting.py
docs/: README.md  architecture.md  boundary-checks.md  channels.md  config.md  configuration.md  event_bus-memory-flow.md  event_bus.md  extensions.md  heartbeat.md  llm.md  memory.md  scheduler.md  secrets.md  task_engine.md  web.md
docs/adr/: 001-supervisor-agent-processes.md  002-extensions.md  003-agent-as-extension.md  004-event-bus.md  005-memory.md  006-mcp-extension.md  007-user-channel-selector.md  008-memory-v2.md  009-memory-timestamp-output-format.md  010-streaming.md  011-onboarding.md  012-secrets.md  013-web-search.md  014-agent-loop2.md  015-skills.md  016-memory-v3.md  017-agents-registry.md  018-task-chains.md  019-cost-capability-routing.md  020-consolidate-openai-compatible-provider.md  021-hard-dependency-contracts.md  022-deferred-tool-resolver.md  022-move-prompts-to-sandbox.md  023-semantic-agent-selection.md  024-unified-inbox.md  025-mail-extension.md  026-web-channel.md  027-session-project-domain-model.md  028-unified-sessions-table.md  029-refactor-core-extensions-boundaries.md  030-agui-endpoint.md  031-remove-matryoshka-embeddings.md  032-setup-instructions-flow.md  033-dynamic-agent-tool-assignment-v1.md  034-package-import-extensions.md  035-pydantic-settings-models.md  036-subsystem-logging.md  (+4 more)
onboarding/: __init__.py  __main__.py  config_writer.py  constants.py  provider_probe.py  state.py  ui.py  wizard.py
prompts/: builder.jinja2  default.jinja2  memory_consolidator.jinja2  memory_maintenance.jinja2  orchestrator.jinja2
scripts/: _boundary_common.py  check_api.py  check_extension_boundaries.py  check_extension_context_boundary.py  check_max_loc.py  heartbeat.py  max_loc_allowlist.txt  mcp_e2e_server.py  reset.py  reset_memory.py  run_ci_checks.py  run_memory_maintenance.py  soul_drive_simulator.py  soul_outreach_validation.py  soul_stage1_soak.py  soul_stage2_gate.py  test_search_memory.py  vulture_allowlist.py
supervisor/: __init__.py  __main__.py  runner.py
tests/: conftest.py  test_agent_factory.py  test_agent_lifecycle.py  test_catalog.py  test_channel_tools.py  test_cli_secure_input.py  test_config_check.py  test_config_writer.py  test_configure_extension.py  test_core_formatting.py  test_declarative_agent.py  test_deferred_scheduler.py  test_deferred_tool_resolver.py  test_embedding_batch.py  test_event_bus.py  test_event_wiring.py  test_extension_context.py  test_extension_import_conventions.py  test_extensions_doctor.py  test_file_manager.py  test_inbox.py  test_kv_tools.py  test_loader.py  test_manifest.py  test_memory_agent.py  test_memory_v2.py  test_model_router.py  test_onboarding_provider_step.py  test_proactive_e2e.py  test_provider_probe.py  test_reset.py  test_router.py  test_router_components.py  test_runtime_bootstrap.py  test_scheduler_extension.py  test_secrets.py  test_secure_input.py  test_semantic_agent_selector.py  test_session_project_repository.py  test_session_rotation.py  (+35 more)
web/: README.md  components.json  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
(+325 files in other folders)
