[project]
name = "assistant4"
version = "4.0.0"
description = "AI agent 4"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "croniter>=1.4.0",
    "pydantic-settings>=2.0.0",
    "dependency-injector>=4.41.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "openai>=1.0.0",
    "openai-agents[sqlalchemy]>=0.2.9",
    "sqlite-vec>=0.1.0",
    "aiogram>=3.24.0",
    "jinja2>=3.1.0",
    "pgvector>=0.3.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "aiogram>=3.24.0",
    "aioconsole>=0.8.0",
    "humanize>=4.9.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
litellm = [
    "openai-agents[litellm]",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0",
    "bandit>=1.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "sandbox/extensions"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "migrations.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["app.web.*", "app.di.*"]
disallow_untyped_decorators = false

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]
